--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -30,6 +30,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 2.5%;
   background-color: aqua;
 }
 
@@ -73,11 +74,26 @@ form button {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   margin: 1% 0;
+  padding: 0.5% 0;
   background-color: lightseagreen;
 }
 
 .characterCard:hover {
   color: firebrick;
   background-color: black;
+}
+
+.characterCard footer {
+  width: 15%;
+  display: flex;
+  justify-content: space-between;
+  margin: 1% 0;
+}
+
+.characterCard footer button {
+  padding: 0 5%;
+  border-radius: 2px;
+  margin-left: 5%;
 }
